--- a/DataVisualizerClassLibrary/DataVisualizerClassLibrary.csproj
+++ b/DataVisualizerClassLibrary/DataVisualizerClassLibrary.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <SupportedOSPlatformVersion>8.0</SupportedOSPlatformVersion>
+	<NoWarn>$(NoWarn);NU1701</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
